# fixed_that_for_you

./: .gitignore  README.md  pyproject.toml
fixed_that_for_you/: __init__.py
tests/: fixer_test.py
