[tool.poetry]
name = "fixed_that_for_you"
version = "1.0.0"
description = "A Python library that fixes attribute name misspellings"
authors = ["megahomyak <g.megahomyak@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
